--- a/community-frontend/package.json
+++ b/community-frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.11",
+    "@types/react-router": "^5.1.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
@@ -23,9 +24,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-particles": "^2.12.2",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.11",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
